--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -148,7 +148,7 @@ footer, header, hgroup, menu, nav, section
 
 html, body
   max-height: 100%
-  background: #BCBCBC
+  background: rgb(222, 222, 222)
 img
   border: 0
 
@@ -167,8 +167,8 @@ li
 .clearright
   clear: right
 
-.bold
-  font-weight: bold
+.500
+  font-weight: 500
 
 .italic
   font-style: italic
@@ -246,7 +246,7 @@ a:hover
   margin: 0 0 0 2.3%
   width: $content_width - 2.1%
   padding: 6px 1%
-  +box-shadow(3px, 2px, 10px, #AAA)
+  //+box-shadow(3px, 2px, 10px, #AAA)
   ul li
     display: block
   a
@@ -282,7 +282,7 @@ img.flex
   width: 100%
   line-height: 17px
   a
-    font-weight: bold
+    font-weight: 500
 
 #inner
   font-size: 0.92em
@@ -304,7 +304,7 @@ img.flex
     +border-radius(8px)
     padding: 2px 8px
   .left
-    font-weight: bold
+    font-weight: 500
     a
       font-weight: normal
       background: #999
@@ -326,7 +326,7 @@ img.flex
     background: #333
     color: #FFF
 a#profile_name
-  font-weight: bold
+  font-weight: 500
   color: $main - #222
   +border_radius(10px)
 
@@ -335,7 +335,7 @@ a#profile_name
   background: #999
   height: 100px
   border: 1px solid #CCC
-  +box-shadow(3px, 3px, 8px, #777)
+  //+box-shadow(3px, 3px, 8px, #777)
   a#profile_name
     +border_radius_top(10px)
     +border_radius_bottom(0px)
@@ -424,7 +424,7 @@ a#profile_name
   position: relative
   top: -30px
   float: right
-  font-weight: bold
+  font-weight: 500
   // padding: 0 0 5px 8px
 
 .articles.index
@@ -446,7 +446,7 @@ a#profile_name
 
 #articles_list li
   a
-    font-weight: bold
+    font-weight: 500
     font-size: 1.1em
   p:last-child
     margin: 0 0 30px 0
@@ -454,7 +454,7 @@ a#profile_name
 
 #logo
   float: left
-  +box-shadow(-3px, -3px, 10px, #777)
+  //+box-shadow(-3px, -3px, 10px, #777)
 
 #likebox
   float: right
@@ -466,7 +466,7 @@ a#profile_name
   width: $content_width
   z-index: 1
   img
-    +box-shadow(0px, -3px, 10px, #333)
+    //+box-shadow(0px, -3px, 10px, #333)
     display: none
   img.first
     display: block
@@ -480,7 +480,7 @@ a#profile_name
   height: 512px
   width: $content_width
   img
-    +box-shadow(0px, -3px, 10px, #333)
+    //+box-shadow(0px, -3px, 10px, #333)
     display: none
     height: 512px
   img.first
@@ -495,7 +495,7 @@ a#profile_name
   width: $content_width
   height: 512px
   img
-    +box-shadow(0px, -3px, 10px, #333)
+    //+box-shadow(0px, -3px, 10px, #333)
     display: none
     height: 512px
   img.first
@@ -510,7 +510,7 @@ a#profile_name
   width: $content_width
   height: 512px
   img
-    +box-shadow(0px, -3px, 10px, #333)
+    //+box-shadow(0px, -3px, 10px, #333)
     display: none
     height: 512px
   img.first
@@ -602,7 +602,7 @@ div#home_swf
 
 #nav
   text-transform: uppercase
-  +box-shadow(-3px, 0px, 5px, #AAA)
+  //+box-shadow(-3px, 0px, 5px, #AAA)
   position: relative
   li
     text-align: right
@@ -610,12 +610,12 @@ div#home_swf
       //text-shadow: #333 0px 0px 1px
       display: block
       background: $main
-      padding: 10px 10px 10px 10px
+      padding: 12px 12px 12px 12px
       color: #fff
       font-size: 13px
-      border: 1px solid #871623
-      border-top: 1px solid $main
-      border-bottom: 1px solid $main
+      //border: 1px solid #871623
+      //border-top: 1px solid $main
+      //border-bottom: 1px solid $main
       width: 84% // safari
       text-align: right
   li .subnav
@@ -656,17 +656,17 @@ div#home_swf
     background: $main
   li:hover, li#masterbutt:hover
     a
-      background: #2c2260
-      border: 1px solid #211949
-      +gradient_bg_perc(#211949, #2d2264, 20%)
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#211949', endColorstr='#2d2264',GradientType=0 )
+      background: rgb(201, 119, 129)
+      //border: 1px solid #211949
+      //+gradient_bg_perc(#211949, #2d2264, 20%)
+      //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#211949', endColorstr='#2d2264',GradientType=0 )
 
 
 .master ul#nav .subnav li a
   background: #392C79
 .master ul#nav .subnav li:hover a
-  +gradient_bg_perc(#211949, #2d2264, 20%)
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#211949', endColorstr='#2d2264',GradientType=0 )
+  //+gradient_bg_perc(#211949, #2d2264, 20%)
+  //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#211949', endColorstr='#2d2264',GradientType=0 )
 
 
 //$subnav_width: 150px
@@ -816,7 +816,7 @@ $video_home_height: 272px
   a
     color: #FFF
     text-shadow: none
-    font-weight: bold
+    font-weight: 500
 
 .master #aside
   background: #392C79
@@ -830,7 +830,7 @@ $video_home_height: 272px
   font-size: 12px
   text-align: right
   margin: 15px 0 20px
-  +box-shadow(0px, 3px, 10px, #444)
+  //+box-shadow(0px, 3px, 10px, #444)
 
 .master #footer
   background: #392C79
@@ -847,7 +847,7 @@ input, textarea, select#user_country
 
 label
   font-size: 0.85em
-  font-weight: bold
+  font-weight: 500
 input, textarea, select#user_country
   margin: 4px 0 10px
   padding: 4px 8px
@@ -875,7 +875,7 @@ textarea.small
     padding: 10px
   label
     font-size: 1.2em
-    font-weight: bold
+    font-weight: 500
   input, textarea
     margin: 3px 0 10px
     padding: 6px 10px
@@ -902,7 +902,7 @@ input.submit
     +color($main)
     text-shadow: none
   a.button.delete
-    font-weight: bold
+    font-weight: 500
     +color(#CCC)
     color: #F00
   a.button.delete:hover
@@ -1115,7 +1115,7 @@ input.radio2
         top: 4px
     .user_details
       p.b
-        font-weight: bold
+        font-weight: 500
         font-size: 0.9em
         margin: 10px 0 3px
 
@@ -1155,7 +1155,7 @@ img.image_left
 
 #works li
   .name
-    font-weight: bold
+    font-weight: 500
   .date
     float: right
     margin-left: 12px
