nascosto tab lavoro

--- a/app/views/works/index.html.haml
+++ b/app/views/works/index.html.haml
@@ -4,11 +4,10 @@
   %p
     = link_to "Richiesta candidatura studenti", [:new_work], class: "button" 
 
-= render partial: "tab_lavoro"
 
-%p L’Accademia è una istituzione privata che opera direttamente a contatto con le categorie professionali di riferimento. Numerose Associazioni ed Ordini Professionali seguono, infatti, costantemente ed appoggiano l’attività dell’ Accademia riconoscendone l’importante funzione di vivaio per i futuri operatori del settore. 
+%p L’Accademia è una istituzione privata che opera direttamente a contatto con le categorie professionali di riferimento. Numerose Associazioni ed Ordini Professionali seguono, infatti, costantemente ed appoggiano l’attività dell’Accademia riconoscendone l’importante funzione di vivaio per i futuri operatori del settore. 
 
-%p La serietà degli studi, l’alto grado di specializzazione fornita, unitamente alla caratteristica dell’insegnamento individualizzato, con un basso numero di studenti per ogni anno accademico, hanno permesso di collocare nel mondo del lavoro, in 50 anni di attività, oltre cinquemila diplomati delle varie discipline e possiamo oggi affermare che la maggior parte di loro ricopre posti di responsabilità nelle aziende dei più svariati settori e nelle libere professioni.
+%p La serietà degli studi, l’alto grado di specializzazione fornita, unitamente alla caratteristica dell’insegnamento individualizzato, con un basso numero di studenti per ogni anno accademico, hanno permesso di collocare nel mondo del lavoro, in quasi 60 anni di attività, oltre cinquemila diplomati delle varie discipline e possiamo oggi affermare che la maggior parte di loro ricopre posti di responsabilità nelle aziende dei più svariati settori e nelle libere professioni.
     
 %p 
-  %b Negli ultimi anni il numero delle richieste di diplomati, pervenute direttamente all'Accademia e' notevolmente aumentato ed e' risultato ampiamente superiore al numero degli studenti che frequentano ogni anno i corsi.
+  %b Negli ultimi anni il numero delle richieste di diplomati, pervenute direttamente all'Accademia e' notevolmente aumentato ed e' risultato superiore al numero degli studenti che frequentano ogni anno i corsi.
