--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -436,7 +436,7 @@ a#profile_name
     margin: 10px 0 30px
     padding: 20px
     background-color: #efefef
-    border-bottom: 1px solid #bfbfbf
+    border-bottom: 50px solid rgba(168, 168, 168, 0.65)
 
 .articles.index #content
   img
