interesse disegno/pittura

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -33,6 +33,8 @@
       = f.label     :int_brevi_visual,    "#{tf "GRAFICA PUBBLICITARIA - Corso Breve", "GRAPHIC DESIGN - short course"}"
       = f.check_box :int_brevi_interior
       = f.label     :int_brevi_interior,  "INTERIOR DESIGN -#{tf "breve", "short "}"
+      = f.check_box :int_disegno_pittura
+      = f.label     :int_disegno_pittura,  "DISEGNO E PITTURA -#{tf "breve", "short "}"
       %div.clear
       %h3.open_day= tf("PARTECIPAZIONE OPEN DAY GRATUITO", "PARTICIPATION FREE OPEN DAY")
       = f.check_box :int_stage_visual
