--- a/app/views/users/_user_infos.html.haml
+++ b/app/views/users/_user_infos.html.haml
@@ -14,6 +14,7 @@
   - show_selection :int_evening_interior, "Corsi serali Interior Design"
   - show_selection :int_brevi_visual, "Corsi brevi Grafica Pubblicitaria"
   - show_selection :int_brevi_interior, "Corsi brevi Interior Design"
+  - show_selection :int_disegno_pittura, "Corso di Disegno e Pittura"
   
   %h3 Voglio partecipare a:
 
