--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -203,6 +203,7 @@ h1
 h2
   margin-bottom: 10px
   font-size: 1.3em
+  max-width:60%
 
 h3
   margin: 10px 0 5px 0
@@ -808,7 +809,7 @@ $video_home_height: 272px
   width: $video_width - 20px
   color: #FFF
   padding: 10px 10px
-  margin: 0 2px 0 15px
+  margin: -27px 2px 0 15px
   li
     margin: 4px 0
   p
