fix basic stuff

--- a/app/views/articles/index.haml
+++ b/app/views/articles/index.haml
@@ -3,12 +3,15 @@
     News
   - else
     Blog
-    
-%ul#articles_list
-  = render @articles
 
-  - if admin?
-    .insert_article
-      = link_to "Inserisci Blog Post", new_article_path(article_type: "post")
-      |
-      = link_to "Vai al blog", [:posts]
+= render @articles
+
+- if admin?
+  .insert_article
+    = link_to "Inserisci Blog Post", new_article_path(article_type: "post")
+    |
+    = link_to "Vai al blog", [:posts]
+
+.line.bg-white
+  .line-compress.line-max
+  .separator50
