--- a/app/views/pages_new/calendario.haml
+++ b/app/views/pages_new/calendario.haml
@@ -1,3 +1,15 @@
-%h1 CACA calen
+.line.bg-white
+  .line-compress.line-max
+    .separator30
+    %h1.line.center-content-tablet
+      Calendario
+    .separator10
+    .separator15.pattern
+    .separator30
+    .line.article
+      %p testo
+  .separator50
 
-%h2 Dario
+.line.bg-white
+  .line-compress.line-max
+  .separator50
