--- a/app/views/pages_new/corsi.haml
+++ b/app/views/pages_new/corsi.haml
@@ -1,4 +1,45 @@
-%h1 Corsi
-
-
-%h3 pipp puzzz!!!
+.line.bg-muted-inverse
+  .line-compress.line-max
+    .separator30
+    %h1.line.color-white.center-content-tablet I Corsi
+    .separator10
+    .separator15.pattern
+    .separator30
+    .line.article
+      .widget.bg-white
+        %iframe{:allowfullscreen => "", :frameborder => "0", :src => "https://www.youtube.com/embed/KICyR3BZWwE", :width => "100%"}
+        .separator15
+        .line-compress
+          .line-compress
+            %h3 Corso 1
+            .separator5
+            %h6 Il corso hau na descrizione finta, a breve
+            .separator30
+            %a.push-right.toggle-opacity-hover{:href => "#"}
+              Info
+        .separator15
+      .widget.bg-white
+        %iframe{:allowfullscreen => "", :frameborder => "0", :src => "https://www.youtube.com/embed/KICyR3BZWwE", :width => "100%"}
+        .separator15
+        .line-compress
+          .line-compress
+            %h3 Corso 2
+            .separator5
+            %h6 Il corso hau na descrizione finta, a breve
+            .separator30
+            %a.push-right.toggle-opacity-hover{:href => "#"}
+              Info
+        .separator15
+      .widget.bg-white
+        %iframe{:allowfullscreen => "", :frameborder => "0", :src => "https://www.youtube.com/embed/KICyR3BZWwE", :width => "100%"}
+        .separator15
+        .line-compress
+          .line-compress
+            %h3 Corso 3
+            .separator5
+            %h6 Il corso hau na descrizione finta, a breve
+            .separator30
+            %a.push-right.toggle-opacity-hover{:href => "#"}
+              Info
+        .separator15
+  .separator50
