--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -1,13 +1,27 @@
 - link = article_path(tr(article).title_url)
-%li
-  - text = "<span class='title'>#{tr(article).title}</span> <span class='date'>#{I18n.l(article.created_at.to_date, format: :custom)}</span>"
-  = link_to text.html_safe, link
-  - unless home_page? || ( @page && @page.id == 1 )
-    %p
-      - text = article.text
-      - text = truncate text if %w(news pages).include? section
-      - text = markup text
-      - dom = Nokogiri.HTML text
-      = parse_text dom.inner_html
+- text = "<span class='title'>#{tr(article).title}</span> <span class='date'>#{I18n.l(article.created_at.to_date, format: :custom)}</span>"
+
+.line.bg-white
+  .line-compress.line-max
+    .separator30
+    %h1.line.center-content-tablet
+      = link_to text.html_safe, link
+    .separator10
+    .separator15.pattern
+    .separator30
+    .line.article
+      %p
+        - unless home_page? || ( @page && @page.id == 1 )
+          - text = article.text
+          - text = truncate text if %w(news pages).include? section
+          - text = markup text
+          - dom = Nokogiri.HTML text
+          = parse_text dom.inner_html
+  .separator50
+
+
+
+
+
 
   .clear
