--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -61,6 +61,10 @@
       contatti: {
         label: "Contatti",
         url:  "/pages/contatti",
+      },
+      l_accademia: {
+        label: "L' Accademia",
+        url:  "/pag/l_accademia",
       }
       # add another link
       #
