--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -1,3 +1,4 @@
+QUA SLIDER.HAML
 .line.bg-white
   .line-compress.line-max
     .separator30
@@ -15,3 +16,5 @@
       %p Una didattica esclusiva, improntata sulla cultura del progetto, che esercita pensiero e creatività e insegna a finalizzare le idee attraverso gli strumenti e i software più aggiornati utilizzati dai professionisti del settore.
 
   .separator50
+
+  QUA GALLERY.HAML
