--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -60,7 +60,7 @@
       },
       contatti: {
         label: "Contatti",
-        url:  "/pages/contatti",
+        url:  "/pag/contatti",
       },
       l_accademia: {
         label: "L' Accademia",
@@ -121,6 +121,8 @@
       $(function(){
       = yield :jquery
       })
+    %script{ src: "http://maps.google.com/maps/api/js" }
+    %script{ type: "text/javascript", src: " /javascripts/gmap.js" }
 
   %body.bg-black{ class: "#{controller.controller_name} #{controller.action_name} #{"master" if master?} #{"admin" if admin?}"}
     / mobile menu
