single page corso

--- a/app/views/pages_new/corsi.haml
+++ b/app/views/pages_new/corsi.haml
@@ -1,7 +1,7 @@
-.line.bg-muted-inverse
+.line.bg-white
   .line-compress.line-max
     .separator30
-    %h1.line.color-white.center-content-tablet I Corsi
+    %h1.line.center-content-tablet I Corsi
     .separator10
     .separator15.pattern
     .separator30
@@ -15,7 +15,7 @@
             .separator5
             %h6 Il corso hau na descrizione finta, a breve
             .separator30
-            %a.push-right.toggle-opacity-hover{:href => "#"}
+            %a.push-right.toggle-opacity-hover{:href => "/pag/corso_id.haml"}
               Info
         .separator15
       .widget.bg-white
