--- a/app/views/pages_new/corsi.haml
+++ b/app/views/pages_new/corsi.haml
@@ -27,7 +27,7 @@
             .separator5
             %h6 Il corso hau na descrizione finta, a breve
             .separator30
-            %a.push-right.toggle-opacity-hover{:href => "#"}
+            %a.push-right.toggle-opacity-hover{:href => "/pag/corso_id.haml"}
               Info
         .separator15
       .widget.bg-white
@@ -39,7 +39,7 @@
             .separator5
             %h6 Il corso hau na descrizione finta, a breve
             .separator30
-            %a.push-right.toggle-opacity-hover{:href => "#"}
+            %a.push-right.toggle-opacity-hover{:href => "/pag/corso_id.haml"}
               Info
         .separator15
   .separator50
