--- a/app/views/pages_new/_gallery.haml
+++ b/app/views/pages_new/_gallery.haml
@@ -27,6 +27,6 @@
           Eventi
           .separator3
     .separator30
-    .line.article qui la gallery
+    .line.article
   .separator50
 / GALLERY
