--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -1,4 +1,7 @@
-.bg-white QUA SLIDER.HAML
+.bg-white
+
+= render partial: "pages_new/slider"
+
 .line.bg-white
   .line-compress.line-max
     .separator30
@@ -17,4 +20,4 @@
 
   .separator50
 
-  QUA GALLERY.HAML
+  = render partial: "pages_new/gallery"
