--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -8,7 +8,9 @@ body *, html * {
   min-height:350px;
   width:auto;
 }
-
+p {
+  margin-top: 10px;
+}
 h1, h2, h3, h4, strong, b {
   font-weight: 500; }
 a {
