--- a/app/views/pages_new/_slider.haml
+++ b/app/views/pages_new/_slider.haml
@@ -1,6 +1,7 @@
 / slider
-.line.bg-muted-inverse
+.line.bg-white
   .line-compress.line-max
+    .separator15
     #banner
       - banner = Banner.new
       - banner.files.each_with_index do |file, idx|
