tel email contacts

--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -151,13 +151,13 @@
           .separator15
           %a.btn.btn-small.color-white.bg-primary Area utenti
         .separator15
-        %a.color-white{:href => "#"}
+        %a.color-white{:href => "/pag/contatti"}
           %i.fa.fa-phone
           Telefono
          
          
          
-        %a.color-white{:href => "#"}
+        %a.color-white{:href => "mailto:info@accademiacappiello.it"}
           %i.fa.fa-envelope-o
           Email
         .separator50
@@ -191,11 +191,11 @@
                     %a.color-primary.toggle-opacity-inverse-hover{:href => "#"}
                       AREA UTENTI
                   %li.col4.right-content
-                    %a.color-white.toggle-opacity-hover{:href => "#"}
+                    %a.color-white.toggle-opacity-hover{:href => "/pag/contatti"}
                       %i.fa.fa-phone.color-white
                       Telefono
                      
-                    %a.color-white.toggle-opacity-hover{:href => "#"}
+                    %a.color-white.toggle-opacity-hover{:href => "mailto:info@accademiacappiello.it"}
                       %i.fa.fa-at.color-white
                       Email
           .separator3
