--- a/app/views/pages_new/contatti.haml
+++ b/app/views/pages_new/contatti.haml
@@ -20,6 +20,7 @@
         |
         = succeed ":" do
           %span.caps FAX
+          +39 055 681 32 11
         %br/
         da Lunedì a Venerdì 9.00-13.00, 16.00-18.00
       %p
@@ -32,10 +33,14 @@
         di Firenze e P.
         %span.caps IVA
         04049410485
+      .separator5
       %p
-        %a{:href => "https://www.facebook.com/accademiaartedesigncappiello"} Facebook
+        %a{:href => "https://www.facebook.com/accademiaartedesigncappiello"}
+          %i.fa.fa-facebook-square &nbsp; Facebook
         %br/
-        %a{:href => "https://twitter.com/Acc_Cappiello"} Twitter
+        .separator5
+        %a{:href => "https://twitter.com/Acc_Cappiello"}
+          %i.fa.fa-twitter &nbsp; Twitter
       %p
         %a{:href => "http://maps.google.it/maps?client=safari&oe=UTF-8&ie=UTF8&q=accademia+cappiello+firenze&fb=1&gl=it&hq=accademia+cappiello&hnear=Florence&t=h&z=16&iwloc=A"}
           %span.caps COME
